--- a/.github/workflows/sonarScan.yml
+++ b/.github/workflows/sonarScan.yml
@@ -12,7 +12,7 @@ name: Sonarcloud Scan
 
 jobs:
   sonarcloud:
-    name: Sonar Code Analysis
+    name: Code Analysis
     environment: CI
     runs-on: ubuntu-latest
     steps:
